# Algorithms

./: CMakeLists.txt  Description.txt  build.sh  run.sh
src/: AlgorithmsConfig.h.in  CMakeLists.txt  main.cpp
src/Math/: CMakeLists.txt  Math.cpp
